Changes to heircrown sofphone

--- a/GoogleService-Info.plist
+++ b/GoogleService-Info.plist
@@ -2,23 +2,33 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>AD_UNIT_ID_FOR_BANNER_TEST</key>
-	<string></string>
-	<key>AD_UNIT_ID_FOR_INTERSTITIAL_TEST</key>
-	<string></string>
 	<key>CLIENT_ID</key>
-	<string></string>
+	<string>717130922735-4r2l8k6j3cess9ndiqoknbdninaomf7s.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string></string>
+	<string>com.googleusercontent.apps.717130922735-4r2l8k6j3cess9ndiqoknbdninaomf7s</string>
 	<key>API_KEY</key>
-	<string></string>
+	<string>AIzaSyCDvx8sVqiCIaoIw6z0edt_A3ivtSwHEVs</string>
 	<key>GCM_SENDER_ID</key>
-	<string></string>
+	<string>717130922735</string>
+	<key>PLIST_VERSION</key>
+	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string></string>
+	<string>com.heircrown.softphone</string>
 	<key>PROJECT_ID</key>
-	<string></string>
+	<string>heir-crown-softphone</string>
 	<key>STORAGE_BUCKET</key>
-	<string></string>
+	<string>heir-crown-softphone.appspot.com</string>
+	<key>IS_ADS_ENABLED</key>
+	<false></false>
+	<key>IS_ANALYTICS_ENABLED</key>
+	<false></false>
+	<key>IS_APPINVITE_ENABLED</key>
+	<true></true>
+	<key>IS_GCM_ENABLED</key>
+	<true></true>
+	<key>IS_SIGNIN_ENABLED</key>
+	<true></true>
+	<key>GOOGLE_APP_ID</key>
+	<string>1:717130922735:ios:6610257b2aba1e26bd391a</string>
 </dict>
 </plist>
