--- a/msgNotificationContent/GoogleService-Info.plist
+++ b/msgNotificationContent/GoogleService-Info.plist
@@ -13,11 +13,11 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>org.linphone.phone.msgNotificationContent</string>
+	<string>com.heircrown.softphone.msgNotificationContent</string>
 	<key>PROJECT_ID</key>
-	<string>linphone-iphone</string>
+	<string>heir-crown-softphone</string>
 	<key>STORAGE_BUCKET</key>
-	<string>linphone-iphone.appspot.com</string>
+	<string>heir-crown-softphone.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false/>
 	<key>IS_ANALYTICS_ENABLED</key>
